tests/bad/include_ints/missing_file.stderr
error: couldn't read $DIR/tests/bad/include_ints/../../test_data/non-existent: No such file or directory (os error 2)
 --> tests/bad/include_ints/missing_file.rs:6:27
  |
6 | static BYTES_31: &[i32] = include_ints!(i32, "../../test_data/non-existent");
  |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `::core::include_bytes` which comes from the expansion of the macro `include_ints` (in Nightly builds, run with -Z macro-backtrace for more info)
